# vidextract.rs

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
