[package]
name = "dwncli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1", features = ["full"] }
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
serde_json = "1.0"
reqwest = "0.11"
owo-colors = "3"
