[package]
name = "dwncli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"  # Optimize for size
panic = "abort"  # Abort on panic to reduce code size
lto = true       # Enable Link-Time Optimization for further size reduction


[dependencies]
tokio = { version = "1", features = ["full"] }
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
serde_json = "1.0"
reqwest = "0.11"
owo-colors = "3"
